--- a/index.html
+++ b/index.html
@@ -3,50 +3,50 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Huge search</title>
-	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" href="favicon.png">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div>
+	<div class="vk-container">
 		<form action="#" method="post" class="vk-search">
-			<input class="vk-input" type="search" placeholder="Search..." name="Search..."></input>
-			<button class="vk-button" type="submit"><img src="favicon.png" alt="favicon"></button>
+			<input class="vk-input" required type="search" placeholder="Search..."></input>
+			<button class="vk-button" type="submit">Search</button>
 		</form>
-		<div>
-			<aside class="vk-people">
-				<h1>People</h1>
-				<ul>
-					<li><a class="vk-people-list" href="#"><img src="img/SaraSoueidan.jpeg" alt="1">Sara Soueidan</a></li>
-					<li><a class="vk-people-list" href="#"><img src="img/RachelSmith.png" alt="1">Rachel Smith</a></li>
-					<li><a class="vk-people-list" href="#"><img src="img/PeterFinlan.jpeg" alt="1">Peter Finlan</a></li>
-					<li><a class="vk-people-list" href="#"><img src="img/PatrickCox.png" alt="1">Patrick Cox</a></li>
-					<li><a class="vk-people-list" href="#"><img src="img/TimHolman.jpeg" alt="1">Tim Holman</a></li>
-					<li><a class="vk-people-list" href="#"><img src="img/ShaunDona.jpeg" alt="1">Shaun Dona</a></li>
+		<div class="vk-search-image">
+			<aside class="vk-col">
+				<h2 class="vk-h2">People</h2>
+				<ul class="vk-list">
+					<li><a href="#"><img class="vk-face" src="img/avatars/SaraSoueidan.jpeg" alt="1"><p>Sara Soueidan</p></a></li>
+					<li><a href="#"><img class="vk-face" src="img/avatars/RachelSmith.png" alt="1"><p>Rachel Smith</p></a></li>
+					<li><a href="#"><img class="vk-face" src="img/avatars/PeterFinlan.jpeg" alt="1"><p>Peter Finlan</p></a></li>
+					<li><a href="#"><img class="vk-face" src="img/avatars/PatrickCox.png" alt="1"><p>Patrick Cox</p></a></li>
+					<li><a href="#"><img class="vk-face" src="img/avatars/TimHolman.jpeg" alt="1"><p>Tim Holman</p></a></li>
+					<li><a href="#"><img class="vk-face" src="img/avatars/ShaunDona.jpeg" alt="1"><p>Shaun Dona</p></a></li>
 				</ul>
 			</aside>
-			<aside class="vk-popular">
-				<h1>Popular</h1>
-				<ul>
-					<li ><a href="#"><img src="img/PagePreloadingEffect.png" alt="2"><p class="vk-popular-list">Page Preloading Effect</p></a></li>
-					<li><a href="#"><img src="img/ArrowNavigationStyles.png" alt="2"><p class="vk-popular-list">Arrow Navigation Styles</p></a></li>
-					<li><a href="#"><img src="img/HoverEffectsIdeasNew.png" alt="2"><p class="vk-popular-list">Ideas for Subtle Hover Effects</p></a></li>
-					<li><a href="#"><img src="img/FreebieHalcyonDays.png" alt="2"><p class="vk-popular-list">Halcyon Day Template</p></a></li>
-					<li><a href="#"><img src="img/ArticleIntroEffects.png" alt="2"><p class="vk-popular-list">Inspiration for Article Intro Effects</p></a></li>
-					<li><a href="#"><img src="img/DraggableDualViewSlideshow.png" alt="2"><p class="vk-popular-list">Draggable Dual-View Slideshow</p></a></li>
+			<aside class="vk-col">
+				<h2 class="vk-h2">Popular</h2>
+				<ul class="vk-list">
+					<li><a href="#"><img src="img/thumbs/PagePreloadingEffect.png" alt="2"><p>Page Preloading Effect</p></a></li>
+					<li><a href="#"><img src="img/thumbs/ArrowNavigationStyles.png" alt="2"><p>Arrow Navigation Styles</p></a></li>
+					<li><a href="#"><img src="img/thumbs/HoverEffectsIdeasNew.png" alt="2"><p>Ideas for Subtle Hover Effects</p></a></li>
+					<li><a href="#"><img src="img/thumbs/FreebieHalcyonDays.png" alt="2"><p>Halcyon Day Template</p></a></li>
+					<li><a href="#"><img src="img/thumbs/ArticleIntroEffects.png" alt="2"><p>Inspiration for Article Intro Effects</p></a></li>
+					<li><a href="#"><img src="img/thumbs/DraggableDualViewSlideshow.png" alt="2"><p>Draggable Dual-View Slideshow</p></a></li>
 				</ul>
 			</aside>
-			<aside class="vk-recent">
-				<h1>Recent</h1>
-				<ul>
-					<li><a href="#"><img src="img/TooltipStylesInspiration.png" alt="2"><p class="vk-recent-list">Tooltip Styles Inspiration</p></a></li>
-					<li><a href="#"><img src="img/AnimatedHeaderBackgrounds.png" alt="2"><p class="vk-recent-list">Animated Header Backgrounds</p></a></li>
-					<li><a href="#"><img src="img/OffCanvas.png" alt="2"><p class="vk-recent-list">Off Canvas Menu Effects</p></a></li>
-					<li><a href="#"><img src="img/TabStyles.png" alt="2"><p class="vk-recent-list">Tab Styles Inspiration</p></a></li>
-					<li><a href="#"><img src="img/ResponsiveSVGs.png" alt="2"><p class="vk-recent-list">Make SVGs Responsive with CSS</p></a></li>
-					<li><a href="#"><img src="img/NotificationStyles.png" alt="2"><p class="vk-recent-list">Notification Styles Inspiration</p></a></li>
+			<aside class="vk-col">
+				<h2 class="vk-h2">Recent</h2>
+				<ul class="vk-list">
+					<li><a href="#"><img src="img/thumbs/TooltipStylesInspiration.png" alt="2"><p>Tooltip Styles Inspiration</p></a></li>
+					<li><a href="#"><img src="img/thumbs/AnimatedHeaderBackgrounds.png" alt="2"><p>Animated Header Backgrounds</p></a></li>
+					<li><a href="#"><img src="img/thumbs/OffCanvas.png" alt="2"><p>Off Canvas Menu Effects</p></a></li>
+					<li><a href="#"><img src="img/thumbs/TabStyles.png" alt="2"><p>Tab Styles Inspiration</p></a></li>
+					<li><a href="#"><img src="img/thumbs/ResponsiveSVGs.png" alt="2"><p>Make SVGs Responsive with CSS</p></a></li>
+					<li><a href="#"><img src="img/thumbs/NotificationStyles.png" alt="2"><p>Notification Styles Inspiration</p></a></li>
 				</ul>
 			</aside>
 		</div>
-	</div>
+</div>
 </body>
 </html>
